--- a/bdelmar-frontend/index.html
+++ b/bdelmar-frontend/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="es">
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <meta name="description" content="B DEL MAR 3011 – Distribuidora y Comercializadora de Mariscos. Calidad y frescura garantizada. Venta al mayor, envíos a domicilio.">
+    <title>B DEL MAR 3011 – Distribuidora de Mariscos</title>
   </head>
   <body>
     <div id="app"></div>
